bk_ida/gccida/c2/new_cselib_val
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_cselib_val/src/cselib.c:1160:50: error: must use 'enum' tag to refer to type 'machine_mode'
cselib_val * new_cselib_val( unsigned int value, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_cselib_val/src/cselib.c:1200:14: error: expected expression
*( ( _OWORD *)object_base + 1) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_cselib_val/src/cselib.c:1200:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)object_base + 1) = 0LL; 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_cselib_val/src/obj/cselib.o] Error 1
